--- a/Information.html
+++ b/Information.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="любофь.css">
+    <link rel="stylesheet" href="Information.css">
   <meta charset="utf-8">
   <title>Комп’ютерна графіка</title>
   </head>
